--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@ layout: base
           {%- endif -%}
 
           {%- if post.image -%}
-            <img class="post-image" src="{{ post.image }}" alt="{{ post.title | escape }}">
+            <img class="post-image" src="{{ post.image }}">
           {%- endif -%}
 
           {%- if site.show_excerpts -%}
