--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,6 +33,20 @@ layout: base
   {%- endif -%}
 
   {{ content }}
+  <!-- Add section describing who am I with a photo of me alongside-->
+  <section>
+    <h2>About Me</h2>
+    <div class="about-me-wrapper">
+      <div class="about-me-text">
+        <p>
+          I am a senior data scientist currently working at Artefact. I'm passionate about using data to solve real-world problems and constantly exploring the realms of machine learning, time series forecasting and natural language processing.
+        </p>
+      </div>
+      <div class="about-me-image">
+        <img src="assets/adam-headshot.png" alt="About Me Image">
+      </div>
+    </div>
+  </section>
 
   {% if site.paginate %}
     {% assign posts = paginator.posts %}
