--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@ layout: base
         </p>
       </div>
       <div class="about-me-image">
-        <img src="/assets/adam-headshot.png" alt="About Me Image">
+        <img src="/assets/adam-headshot.jpg" alt="About Me Image">
       </div>
     </div>
   </section>
