--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,12 +37,12 @@ layout: base
   <section>
     <h2>About Me</h2>
     <div class="about-me-wrapper">
-      <div class="about-me-text">
+      <div class="about-me-text" style="flex: 1;">
         <p>
           I am a senior data scientist currently working at Artefact. I'm passionate about using data to solve real-world problems and constantly exploring the realms of machine learning, time series forecasting and natural language processing.
         </p>
       </div>
-      <div class="about-me-image">
+      <div class="about-me-image" style="flex: 1;"></div>
         <img src="/assets/adam-headshot.jpg" alt="About Me Image">
       </div>
     </div>
