--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,11 +41,11 @@ layout: base
     <div class="post-wrapper">
       <div class="post-text" style="flex: 1;">
         <p>
-          I am a senior data scientist currently working at Artefact. I'm passionate about using data to solve real-world problems and constantly exploring the realms of machine learning, time series forecasting and natural language processing.
+          I am a data science manager currently working at Artefact. I'm passionate about using data to solve real-world problems and constantly exploring the realms of machine learning, time series forecasting and natural language processing.
         </p>
       </div>
-      <div class="post-image-wrapper" style="flex: 1;"></div>
-        <img class="post-image" src="/assets/adam-headshot.jpg" alt="About Me Image"   style="width: 30%;">
+      <div class="post-image-wrapper" style="flex: 1;"  style="width: 30%;"></div>
+        <img class="post-image" src="/assets/adam-headshot.jpg" alt="About Me Image">
       </div>
     </div>
   </section>
@@ -94,71 +94,6 @@ layout: base
     {%- endif -%}
   </section>
 
-  {% if site.paginate %}
-    {% assign posts = paginator.posts %}
-  {% else %}
-    {% assign posts = site.posts %}
-  {% endif %}
-
-  {%- if posts.size > 0 -%}
-    {%- if page.list_title -%}
-      <h2 class="post-list-heading">{{ page.list_title }}</h2>
-    {%- endif -%}
-    <ul class="post-list">
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      {%- for post in posts -%}
-      <li>
-        <div class="post-content">
-          <span class="post-meta">{{ post.date | date: date_format }}</span>
-
-          <div class="post-wrapper">
-            <div class="post-text">
-              <h3>
-                <a class="post-link" href="{{ post.url | relative_url }}">
-                  {{ post.title | escape }}
-                </a>
-              </h3>
-
-              {%- if post.subtitle -%}
-                <p class="post-subtitle">{{ post.subtitle }}</p>
-              {%- endif -%}
-
-              {%- if site.show_excerpts -%}
-                {{ post.excerpt }}
-              {%- endif -%}
-            </div>
-
-            {%- if post.image -%}
-              <div class="post-image-wrapper"  style="width: 50%;">
-                <img class="post-image" src="{{ post.image | relative_url }}" style="width: 100%;">
-              </div>
-            {%- endif -%}
-          </div>
-        </div>
-        
-      </li>
-      {%- endfor -%}
-    </ul>
-
-    {% if site.paginate %}
-      <div class="pager">
-        <ul class="pagination">
-        {%- if paginator.previous_page %}
-          <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{ paginator.previous_page }}</a></li>
-        {%- else %}
-          <li><div class="pager-edge">•</div></li>
-        {%- endif %}
-          <li><div class="current-page">{{ paginator.page }}</div></li>
-        {%- if paginator.next_page %}
-          <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">{{ paginator.next_page }}</a></li>
-        {%- else %}
-          <li><div class="pager-edge">•</div></li>
-        {%- endif %}
-        </ul>
-      </div>
-    {%- endif %}
-  {%- endif -%}
-</div>
 
 </body>
 </html>
