--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,9 +39,9 @@ layout: base
   <section>
     <h2>About Me</h2>
     <div class="post-wrapper">
-      <div class="post-text" style="flex: 1;">
+      <div class="post-text" style="width: 70%;">
         <p>
-          I am a data science manager currently working at Artefact. I'm passionate about using data to solve real-world problems and constantly exploring the realms of machine learning, time series forecasting and natural language processing.
+          I am a data science manager currently working at Artefact. I'm passionate about using data to solve real-world problems and am constantly exploring the realms of machine learning, time series forecasting and natural language processing.
         </p>
       </div>
       <div class="post-image-wrapper" style="width: 30%;"></div>
