--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,10 +44,9 @@ layout: base
           I am a data science manager currently working at Artefact. I'm passionate about using data to solve real-world problems and am constantly exploring the realms of machine learning, time series forecasting and natural language processing.
         </p>
       </div>
-      <div class="post-image-wrapper" style="width: 30%;"></div>
-        <img class="post-image" src="/assets/adam-headshot.jpg" alt="About Me Image">
+      <div class="post-image-wrapper" style="width: 30%;">
+        <img class="post-image" src="/assets/adam-headshot.jpg" alt="About Me Image"></div>
       </div>
-    </div>
   </section>
 
   <!-- Add section for Blog Posts -->
