little bitta formating

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,10 +39,15 @@ layout: base
   <section>
     <h2>About Me</h2>
     <div class="post-wrapper">
-      <div class="post-text" style="width: 70%;">
+      <div class="post-text" style="width: 70%; background-color: #f2f2f2; padding: 20px;">
         <p>
           I am a data science manager currently working at Artefact. I'm passionate about using data to solve real-world problems and am constantly exploring the realms of machine learning, time series forecasting and natural language processing.
         </p>
+        <!-- <ul>
+            <li>I previously completed a PhD in Biophysics from Kings College London</li>
+            <li>Point 2</li>
+            <li>Point 3</li>
+        </ul> -->
       </div>
       <div class="post-image-wrapper" style="width: 30%;">
         <img class="post-image" src="/assets/adam-headshot.jpg" alt="About Me Image"></div>
