--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@ layout: base
           I am a data science manager currently working at Artefact. I'm passionate about using data to solve real-world problems and am constantly exploring the realms of machine learning, time series forecasting and natural language processing.
         </p>
         <p>
-          I previously completex a PhD.
+            In what feels like a different lifetime, I completed a PhD in Biophysics from KCL. You can find my papers on <a href="https://scholar.google.com/citations?user=vKNn-oYAAAAJ&hl=en">Google Scholar</a>
         </p>
       </div>
       <div class="post-image-wrapper" style="flex: 30%;">
