--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,23 +34,23 @@ layout: base
 
   {{ content }}
   
-
-  <!-- Add section describing who am I with a photo of me alongside-->
-  <section>
-    <h2>About Me</h2>
-    <div class="post-wrapper" style="display: flex;"">
-      <div class="post-text" style="flex: 70%; background-color: #f2f2f2; padding: 20px;">
-        <p>
-          I am a data science manager currently working at Artefact. I'm passionate about using data to solve real-world problems and am constantly exploring the realms of machine learning, time series forecasting and natural language processing.
-        </p>
-        <p>
-            In what feels like a different lifetime, I completed a PhD in Biophysics from KCL. You can find my papers on <a href="https://scholar.google.com/citations?user=vKNn-oYAAAAJ&hl=en">Google Scholar</a>
-        </p>
-      </div>
-      <div class="post-image-wrapper" style="flex: 30%;">
-        <img class="post-image" src="/assets/adam-headshot.jpg" alt="About Me Image"></div>
-      </div>
-  </section>
+  <div class="divider">
+    <div class="left">
+      <img id="profilepic" width="200" height="200" src="/assets/adam-headshot.jpg" alt="Profile">
+    </div>
+    <div class="right">
+      <p>Hi! I'm Adam Kells, and welcome to my website!</p>
+      <p>
+        I am a data science manager currently working at Artefact. I'm passionate about using data to solve real-world problems and am constantly exploring the realms of machine learning, time series forecasting and natural language processing.
+      </p>
+      <p>
+        In what feels like a different lifetime, I completed a PhD in Biophysics from KCL. You can find my papers on <a href="https://scholar.google.com/citations?user=vKNn-oYAAAAJ&hl=en">Google Scholar</a>
+      </p>
+      <!-- <p>
+        <i>I'm happy to discuss research, so feel free to <a href="mailto:adamjkells93@gmail.com">reach out</a>!</i>
+      </p> -->
+    </div>
+  </div>
 
   <!-- Add section for Blog Posts -->
   <section>
