--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,6 +23,17 @@ layout: base
     .post-image-wrapper {
       margin-left: 20px; /* Adjust margin as needed */
     }
+
+    .left {
+      flex: 0 0 40%;
+      text-align: center;
+      padding: 10px;
+    }
+
+    .right {
+      flex: 1;
+      padding: 10px;
+    }
   </style>
 </head>
 <body>
