--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,7 +51,7 @@ layout: base
   
   <div class="divider">
     <div class="left">
-      <img id="profilepic" width="200" height="200" src="/assets/adam-headshot.jpg" alt="Profile">
+      <img id="profilepic" width="200" height="200" style="border-radius: 50%;" src="/assets/adam-headshot_crop.jpg" alt="Profile">
     </div>
     <div class="right">
       <p>Hi! I'm Adam Kells, and welcome to my website!</p>
