--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,9 +35,10 @@ layout: base
       padding: 10px;
     }
 
-    .divider {
-    display: flex;
-  }
+    @media (min-width: 768px) {
+      .divider {
+        display: flex;
+      }}
   </style>
 </head>
 <body>
